# SlintGraph

./: Cargo.toml  build.rs  flake.nix  index.html
data/: enactor-1-1.0.xml  enactor-test.xml  graph-1.xml  graph-2.xml  graph-bk.xml
src/: graph.rs  lib.rs  main.rs  ui_utils.rs  utils.rs  xml_utils.rs
src/graph/: mod.rs
ui/: edge.slint  movable-rectangle.slint  types.slint  utils.slint  window.slint  window.test.slint
ui/edge/: arrow-head.slint  edge.slint  temp.slint
ui/shapes/: action.slint  movable-rectangle.slint  node.slint  state.slint
