[package]
name = "slint-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
quick-xml = { version = "0.36.1", features = ["arbitrary", "async-tokio", "document-features", "encoding", "encoding_rs", "escape-html", "overlapped-lists", "serde", "serde-types", "serialize", "tokio"] }
slint = "1.7.1"

[build-dependencies]
slint-build = "1.7.1"
