[package]
name = "slint-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
quick-xml = { version = "0.36.1", features = ["arbitrary", "encoding", "encoding_rs", "escape-html", "overlapped-lists", "serde", "serde-types", "serialize", "async-tokio"] }
slint = "1.7.2"
tokio = { version = "1.39.2", features = ["full"]}
futures = { version = "0.3.30" }

[build-dependencies]
slint-build = "1.7.2"
